--- a/app/templates/book_details.html
+++ b/app/templates/book_details.html
@@ -1,15 +1,17 @@
-<h2 ng-bind="book.title"></h2>
-<h2 ng-bind="book.subtitle"></h3>
+<h2 ng-bind="book.title" class='bm-book-title'></h2>
+<h2 ng-bind="book.subtitle" class='bm-book-subtitle'></h3>
 <p>
   <ul>
-    <li ng-bind-template="ISBN: {{ book.isbn }}"></li>
-    <li ng-bind-template="Seiten: {{ book.numPages }}"></li>
-    <li ng-bind-template="Author: {{ book.author }}"></li>
+    <li ng-bind-template="ISBN: {{ book.isbn }}" class='bm-book-isbn'></li>
+    <li ng-bind-template="Seiten: {{ book.numPages }}" class='bm-book-num-pages'></li>
+    <li ng-bind-template="Author: {{ book.author }}" class='bm-book-author'></li>
     <li>
       Verlag:
-      <a ng-href="{{ book.publisher.url }}" target='_blank' ng-bind="{{ book.publisher.name}}"></a>
+      <a ng-href="{{ book.publisher.url }}" target='_blank' ng-bind="{{ book.publisher.name}}" class='bm-book-publisher-name'></a>
     </li>
   </ul>
 </p>
 <hr>
-<p ng-bind="book.abstract"></p>
+<p ng-bind="book.abstract" class='bm-book-abstract'></p>
+
+<a ng-click='goToListView()' href='' class='bm-list-view-btn'>Zurück</a>
